[package]
name = "game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.9" }#, features = ["dynamic"] } # NOTE NOTE feature dynamic increses compile time but doesnt work with web target → add back when deving on native
# NOTE: for native wayland support later: features = ["wayland"]  [@https://bevy-cheatbook.github.io/platforms/linux.html]
# NOTE: Remember to remove "dynamic" before releasing your game! Otherwise you will need to include libbevy_dylib alongside your game if you want it to run. If you remove the "dynamic" feature, your game executable can run standalone.
console_error_panic_hook = "0.1"

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"

#[toolchain]
#channel = "nightly"
