[package]
name = "game"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.9" }#, features = ["dynamic"] } # NOTE NOTE feature dynamic increses compile time but doesnt work with web target → add back when deving on native
# NOTE: for native wayland support later: features = ["wayland"]  [@https://bevy-cheatbook.github.io/platforms/linux.html]
# NOTE: Remember to remove "dynamic" before releasing your game! Otherwise you will need to include libbevy_dylib alongside your game if you want it to run. If you remove the "dynamic" feature, your game executable can run standalone.
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2.84"  # NOTE REMOVE when not explocitely using wasm interop?  [@wasm-bindgen]

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1  # Enable a small amount of optimization in debug mode
debug = 0  # Disabling debug info speeds up builds a bunch set this to 1 or 2 to get more useful backtraces in debugger.

[profile.dev.package."*"]
opt-level = 3  # Enable high optimizations (only) for dependencies

[profile.release]
lto = "thin"
#incremental = true  # make sure to benefit from this, because: longer compile time from scratch and less optimized result
debug = 0

#[toolchain]
#channel = "nightly"  # recommended for bevy but expensive

[lib]
crate-type = ["cdylib"]  # see [@wasm-bindgen]; TODO: move to specific wasm lib target

# REMOVE? from wasm-bindgen
[dependencies.web-sys]
version = "0.3.4"
features = ['Document', 'Element', 'HtmlElement', 'Node', 'Window']
